yaml-examples/healthchecks/healthchecks-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: healthchecks
  namespace: default
  labels:
    app: healthchecks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthchecks
  template:
    metadata:
      labels:
        app: healthchecks
    spec:

      containers:
      - name: healthchecks
        image: linuxserver/healthchecks
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
        volumeMounts:
          - mountPath: /config
            name: config
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: healthchecks
