yaml-examples/healthchecks/healthchecks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthchecks
  namespace: default
spec:
  selector:
    app: healthchecks
  ports:
  - port: 8000
    targetPort: 8000
